fizzbuzz-enterprise/k8s/computation-policy-config.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fizzbuzz-policy-decision-point-network-policy
  namespace: fizzbuzz-enterprise
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: policy-decision-point
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: fizzbuzz-enterprise-service
      ports:
        - protocol: TCP
          port: 8443
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: fizzbuzz-enterprise-service
      ports:
        - protocol: TCP
          port: 8443
